fix some bug and add event click on item and key enter to select item

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <span>></span>
       </button>
       <!-- onkeyup="filterFunction()" -->
-      <div id="dropdownList" class="dropdown-content show">
+      <div id="dropdownList" class="dropdown-content">
         <div class="search-section" id="search-section">
           <input
             type="text"
